test/Gramatica Lineal Izquierda.txt
<Programa> -> <Bloque> .

<Bloque> -> <LinealC> <LinealV> <LinealP> <Proposicion>
<LinealC> -> const <CicloNum> ;
<LinealC> -> ∅
<CicloNum> -> id = num <CicloNumPrima>
<CicloNumPrima> -> , <CicloNum>
<CicloNumPrima> -> ∅
<LinealV> -> var <CicloId> ;
<LinealV> -> ∅
<CicloId> -> id <CicloIdPrima>
<CicloIdPrima> -> , <CicloId>
<CicloIdPrima> -> ∅
<LinealP> -> proced id ; <Bloque> ; <LinealP>
<LinealP> -> ∅

<Condicion> -> <Expresion> <MultSigno> <Expresion>
<MultSigno> -> ==
<MultSigno> -> !=
<MultSigno> -> <
<MultSigno> -> >
<MultSigno> -> <=
<MultSigno> -> >=

<Proposicion> -> begin <CicloProp> end
<Proposicion> -> id = <Expresion>
<Proposicion> -> write <DisyWri>
<DisyWri> -> id
<DisyWri> -> num
<Proposicion> -> read id
<Proposicion> -> call id
<Proposicion> -> if <Condicion>then <Proposicion> 
<Proposicion> -> while <Expresion> do <Proposicion> 
<Proposicion> -> for id = <Expresion> <DisyExp> <Expresion>do <Proposicion> 
<DisyExp> -> to
<DisyExp> ->down
<CicloProp> -> <Proposicion> <CicloPropPrima>
<CicloPropPrima> -> ; <CicloProp>
<CicloPropPrima> ->  ∅


<LinealRead> -> read id
<LinealCall> -> call id
<LinealIf> -> if <Condicion> then <Proposicion>
<LinealWhile> -> while <Condicion> do <Proposicion>
<LinealFor> -> for id = <Expresion> <DisyExp> <Expresion> do <Proposicion>
<DisyExp> -> to
<DisyExp> -> down

<Expresion> -> <Termino> <Exp_prima>
<Exp_prima> -> <DisySig> <Expresion>
<Exp_prima> -> Ø
<DisySig> -> +
<DisySig> -> -

<Termino> -> <Factor> <Termino_prima>
<Termino_prima> -> <DisySigno> <Termino>
<Termino_prima> -> Ø
<DisySigno> -> *
<DisySigno> -> /

<Factor> -> (<Expresion>)
<Factor> -> id
<Factor> -> num
